--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@ body{
 	align-items: center;
 	font-family: 'Spartan', sans-serif;
 	font-size: 15px;
-	background-image: url('../../images/bg-pattern-top-desktop.svg'), url('../../images/bg-pattern-bottom-desktop.svg');
-	background-repeat: no-repeat;
-	background-position: left top, left bottom;
 }
 
 .main-container{
 	max-width: 1440px;
+	background-image: url(../images/bg-pattern-top-desktop.svg), url(../images/bg-pattern-bottom-desktop.svg);
+    background-position: left top, right bottom;
+    background-repeat: no-repeat, no-repeat;
 }
 
 .container{
@@ -211,8 +211,9 @@ body{
 }
 
 @media only screen and (max-width: 375px){
-	body{
-		background-image: url('../../images/bg-pattern-top-mobile.svg'), url('../../images/bg-pattern-bottom-mobile.svg');
+	.main-container{
+		max-width: 375px;
+		background-image: url(../images/bg-pattern-top-mobile.svg), url(../images/bg-pattern-bottom-mobile.svg);
 	}
 
 	.card-4, .card-5, .card-6{
