--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,14 @@ body{
 	font-size: 15px;
 }
 
-.main-container{
-	max-width: 1440px;
+.background-img{
 	background-image: url(../images/bg-pattern-top-desktop.svg), url(../images/bg-pattern-bottom-desktop.svg);
     background-position: left top, right bottom;
     background-repeat: no-repeat, no-repeat;
+}
+
+.main-container{
+	max-width: 1440px;
 }
 
 .container{
@@ -211,9 +214,12 @@ body{
 }
 
 @media only screen and (max-width: 375px){
+	.background-img{
+		background-image: url(../images/bg-pattern-top-mobile.svg), url(../images/bg-pattern-bottom-mobile.svg);
+	}
+
 	.main-container{
 		max-width: 375px;
-		background-image: url(../images/bg-pattern-top-mobile.svg), url(../images/bg-pattern-bottom-mobile.svg);
 	}
 
 	.card-4, .card-5, .card-6{
