--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 	font-family: 'Spartan', sans-serif;
 	font-size: 15px;
 	background-image: url(../images/bg-pattern-top-desktop.svg), url(../images/bg-pattern-bottom-desktop.svg);
-    background-position: left top, center;
+    background-position: left top, left bottom;
     background-repeat: no-repeat, no-repeat;
 }
 
