--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,10 @@ body{
 }
 
 @media only screen and (max-width: 375px){
+	body{
+		background-image: url(../images/bg-pattern-top-mobile.svg), url(../images/bg-pattern-bottom-mobile.svg);
+	}
+
 	.main-container{
 		max-width: 375px;
 	}
